--- a/Bai2/Bai2.html
+++ b/Bai2/Bai2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./web.js" type="module"></script>
+    <script src="./Bai2.js" type="module"></script>
 </body>
 </html>
